--- a/partials/product.html
+++ b/partials/product.html
@@ -1,4 +1,4 @@
-<section class="product">
+<section class="product" data-url="/images/ring">
     <div class="product__content">
         <h2 class="product__heading js-reveal-heading">
             Каждое изделие<br> проходит строгий<br>контроль качества
