--- a/src/scss/_implement.scss
+++ b/src/scss/_implement.scss
@@ -141,6 +141,13 @@
   font-weight: 400;
   line-height: 100%;
   letter-spacing: -0.048rem;
+
+  svg {
+    width: 2.2rem;
+    height: 2.2rem;
+    fill: currentColor;
+    flex-shrink: 0;
+  }
   &:link,
   &:visited {
     color: var(--text-color);
