--- a/partials/creation.html
+++ b/partials/creation.html
@@ -1,4 +1,4 @@
-<section class="creation">
+<section class="creation" id="items">
     <div class="creation__content">
         <h2 class="creation__heading js-reveal-heading">
             Мы не просто создаем украшения,<br> мы создаем воспоминания
