--- a/partials/header.html
+++ b/partials/header.html
@@ -6,7 +6,7 @@
                     <div class="page-header__nav">
                         <ul>
                             <li>
-                                <a href="#">
+                                <a href="#items">
                                     Изделия
                                 </a>
                             </li>
