--- a/src/scss/_write-us.scss
+++ b/src/scss/_write-us.scss
@@ -123,7 +123,7 @@
 
   @media (hover: hover) {
     &:hover {
-      background-color: var(--primary-color);
+      background-color: white;
       color: var(--text-color);
     }
   }
