--- a/partials/process.html
+++ b/partials/process.html
@@ -5,7 +5,7 @@
         </h2>
         <ol class="process__list js-fade-reveal">
             <li class="process__list-item">
-                <div class="process__card js-accordion">
+                <div class="process__card js-accordion" data-close-other="">
                     <button class="process__card-btn js-accordion-btn" type="button">
                         <span class="process__card-title">
                             Разрабатываем 3D-модель
@@ -22,7 +22,7 @@
                 </div>
             </li>
             <li class="process__list-item">
-                <div class="process__card js-accordion">
+                <div class="process__card js-accordion" data-close-other="">
                     <button class="process__card-btn js-accordion-btn" type="button">
                         <span class="process__card-title">
                             Согласуем заказ и приступаем к созданию
@@ -38,7 +38,7 @@
                 </div>
             </li>
             <li class="process__list-item">
-                <div class="process__card js-accordion">
+                <div class="process__card js-accordion" data-close-other="">
                     <button class="process__card-btn js-accordion-btn" type="button">
                         <span class="process__card-title">
                             Подтверждаем пробу в госорганах (ГИПН)
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li class="process__list-item">
-                <div class="process__card js-accordion">
+                <div class="process__card js-accordion" data-close-other="">
                     <button class="process__card-btn js-accordion-btn" type="button">
                         <span class="process__card-title">
                             Проводим финишную
@@ -73,7 +73,7 @@
             </li>
             <li class="process__list-item">
 
-                <div class="process__card js-accordion">
+                <div class="process__card js-accordion" data-close-other="">
                     <button class="process__card-btn js-accordion-btn" type="button">
                         <span class="process__card-title">
                             Выбираем упаковку перед отправкой
@@ -90,7 +90,7 @@
                 </div>
             </li>
             <li class="process__list-item">
-                <div class="process__card js-accordion">
+                <div class="process__card js-accordion" data-close-other="">
                     <button class="process__card-btn js-accordion-btn" type="button">
                         <span class="process__card-title">
                             Доставляем заказы по всей России
