--- a/partials/creation.html
+++ b/partials/creation.html
@@ -9,7 +9,7 @@
                     <div class="swiper-slide swiper-slide--wide">
                         <a href="#callback-modal" class="creation__slider-card">
                             <div class="creation__slider-card-image-wrapper">
-                                <img src="/images/creation/1.webp" alt="" class="creation__slider-card-image">
+                                <img src="/images/new-photos/1.webp" alt="" class="creation__slider-card-image">
                             </div>
                             <h3 class="creation__slider-card-title">
                                 На свадьбу
@@ -30,7 +30,7 @@
                     <div class="swiper-slide">
                         <a href="#callback-modal" class="creation__slider-card">
                             <div class="creation__slider-card-image-wrapper">
-                                <img src="/images/creation/2.webp" alt="" class="creation__slider-card-image">
+                                <img src="/images/new-photos/2.webp" alt="" class="creation__slider-card-image">
                             </div>
                             <h3 class="creation__slider-card-title">
                                 Деловой презент
@@ -51,7 +51,7 @@
                     <div class="swiper-slide">
                         <a href="#callback-modal" class="creation__slider-card">
                             <div class="creation__slider-card-image-wrapper">
-                                <img src="/images/creation/3.webp" alt="" class="creation__slider-card-image">
+                                <img src="/images/new-photos/3.webp" alt="" class="creation__slider-card-image">
                             </div>
                             <h3 class="creation__slider-card-title">
                                 Символические
@@ -76,7 +76,7 @@
                     <div class="swiper-slide">
                         <a href="#callback-modal" class="creation__slider-card">
                             <div class="creation__slider-card-image-wrapper">
-                                <img src="/images/creation/4.webp" alt="" class="creation__slider-card-image">
+                                <img src="/images/new-photos/4.webp" alt="" class="creation__slider-card-image">
                             </div>
                             <h3 class="creation__slider-card-title">
                                 деловой презент
@@ -97,7 +97,7 @@
                     <div class="swiper-slide swiper-slide--wide">
                         <a href="#callback-modal" class="creation__slider-card">
                             <div class="creation__slider-card-image-wrapper">
-                                <img src="/images/creation/5.webp" alt="" class="creation__slider-card-image">
+                                <img src="/images/new-photos/5.webp" alt="" class="creation__slider-card-image">
                             </div>
                             <h3 class="creation__slider-card-title">
                                 для помолвки
@@ -118,7 +118,7 @@
                     <div class="swiper-slide swiper-slide--wide">
                         <a href="#callback-modal" class="creation__slider-card">
                             <div class="creation__slider-card-image-wrapper">
-                                <img src="/images/creation/6.webp" alt="" class="creation__slider-card-image">
+                                <img src="/images/new-photos/6.webp" alt="" class="creation__slider-card-image">
                             </div>
                             <h3 class="creation__slider-card-title">
                                 для помолвки
@@ -139,7 +139,7 @@
                     <div class="swiper-slide">
                         <a href="#callback-modal" class="creation__slider-card">
                             <div class="creation__slider-card-image-wrapper">
-                                <img src="/images/creation/7.webp" alt="" class="creation__slider-card-image">
+                                <img src="/images/new-photos/7.webp" alt="" class="creation__slider-card-image">
                             </div>
                             <h3 class="creation__slider-card-title">
                                 Духовный подарок
