--- a/partials/product.html
+++ b/partials/product.html
@@ -16,7 +16,11 @@
                 </div>
 
             </div>
-            <canvas></canvas>
+            {{!-- <canvas></canvas> --}}
+
+            <div class="product__image-wrapper">
+                <img src="/images/product.webp" alt="" class="product__image">
+            </div>
         </div>
         <ol class="product__list">
             <li class="product__list-item">
