--- a/src/scss/_clients.scss
+++ b/src/scss/_clients.scss
@@ -102,6 +102,8 @@
     line-height: 110%;
     letter-spacing: -0.054rem;
     text-transform: uppercase;
+    width: 20%;
+    flex-grow: 1;
   }
 }
 
