--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -34,6 +34,10 @@ body {
   overflow-anchor: none;
 }
 
+.not-found-page {
+  background-color: #f8f7f5;
+}
+
 body.menu-open,
 body.modal-open {
   touch-action: none;
