--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,51 +1,53 @@
-<footer class="page-footer">
+{{#unless darkHeader}}
+    <footer class="page-footer">
 
-    <div class="page-footer__content">
+        <div class="page-footer__content">
 
-        <a href="/" class="page-footer__logo">
-            <img src="/images/logo.webp" alt="" class="page-footer__logo-image">
-        </a>
-        <a href="#" class="page-footer__made-by">
-            Разработано студией Mark Weber
-        </a>
+            <a href="/" class="page-footer__logo">
+                <img src="/images/logo.webp" alt="" class="page-footer__logo-image">
+            </a>
+            <a href="#" class="page-footer__made-by">
+                Разработано студией Mark Weber
+            </a>
 
-        <div class="page-footer__wrapper">
-            <div class="page-footer__requisites">
-                ООО "Ювелирная мастерская Дасаева" ИНН / ОГРН<br>
-                16500567889 / 11299394902 Казань, Чернышевского, 33
-            </div>
-
-            <div class="page-footer__phone">
-                <div class="page-footer__phone-title">
-                    Перезвоните мне
+            <div class="page-footer__wrapper">
+                <div class="page-footer__requisites">
+                    ООО "Ювелирная мастерская Дасаева" ИНН / ОГРН<br>
+                    16500567889 / 11299394902 Казань, Чернышевского, 33
                 </div>
-                <a href="#" class="page-footer__phone-link">
-                    8 (843) 231-83-36
-                </a>
+
+                <div class="page-footer__phone">
+                    <div class="page-footer__phone-title">
+                        Перезвоните мне
+                    </div>
+                    <a href="#" class="page-footer__phone-link">
+                        8 (843) 231-83-36
+                    </a>
+                </div>
+                <ul class="page-footer__social-list">
+                    <li class="page-footer__social-list-item">
+                        <a href="#" class="page-footer__social-link">
+                            <svg width="14" height="14" aria-hidden="true">
+                                <use xlink:href="#vk"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="page-footer__social-list-item">
+                        <a href="#" class="page-footer__social-link">
+                            <svg width="14" height="14" aria-hidden="true">
+                                <use xlink:href="#telegram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="page-footer__social-list-item">
+                        <a href="#" class="page-footer__social-link">
+                            <svg width="14" height="14" aria-hidden="true">
+                                <use xlink:href="#whatsapp"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
-            <ul class="page-footer__social-list">
-                <li class="page-footer__social-list-item">
-                    <a href="#" class="page-footer__social-link">
-                        <svg width="14" height="14" aria-hidden="true">
-                            <use xlink:href="#vk"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="page-footer__social-list-item">
-                    <a href="#" class="page-footer__social-link">
-                        <svg width="14" height="14" aria-hidden="true">
-                            <use xlink:href="#telegram"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="page-footer__social-list-item">
-                    <a href="#" class="page-footer__social-link">
-                        <svg width="14" height="14" aria-hidden="true">
-                            <use xlink:href="#whatsapp"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
         </div>
-    </div>
-</footer>
+    </footer>
+{{/unless}}
