--- a/src/scss/_page-header.scss
+++ b/src/scss/_page-header.scss
@@ -9,10 +9,7 @@
   top: 0;
   width: 100%;
   z-index: 100;
-
-  @include breakpoint(mobile) {
-    padding: 1rem 0;
-  }
+  transition: background-color 0.4s, color 0.4s;
 
   &::after {
     content: "";
@@ -23,6 +20,21 @@
     height: 1px;
     background-color: #323232;
     z-index: 80;
+    transition: opacity 0.4s;
+  }
+
+  body:not(.menu-open) & {
+    &--dark {
+      background: #f8f7f5;
+      color: var(--text-color);
+      &::after {
+        opacity: 0;
+      }
+    }
+  }
+
+  @include breakpoint(mobile) {
+    padding: 1rem 0;
   }
 }
 
@@ -95,6 +107,24 @@
   width: 13rem;
   height: auto;
   display: block;
+  transition: opacity 0.2s;
+  &:nth-child(2) {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    opacity: 0;
+  }
+
+  body:not(.menu-open) .page-header--dark & {
+    &:nth-child(1) {
+      opacity: 0;
+    }
+    &:nth-child(2) {
+      opacity: 1;
+    }
+  }
 
   @include breakpoint(mobile) {
     width: 10rem;
@@ -192,7 +222,13 @@
       width: 1.8rem;
       height: 1px;
       background-color: white;
-      transition: opacity 0.2s, transform 0.2s;
+      transition: opacity 0.2s, transform 0.2s, background-color 0.2s;
+    }
+
+    body:not(.menu-open) .page-header--dark & {
+      & > span {
+        background-color: var(--text-color);
+      }
     }
 
     .menu-open & {
