--- a/src/scss/_stages.scss
+++ b/src/scss/_stages.scss
@@ -44,6 +44,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  cursor: default;
 
   &::before {
     display: none;
@@ -54,6 +55,7 @@
     grid-template-columns: 4.6rem 1fr;
     grid-template-areas: "counter card";
     align-items: flex-start;
+    overflow: visible;
 
     &::before {
       content: "[ " counter(ordered-list, decimal-leading-zero) " ]";
