--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -12,6 +12,12 @@
   padding-top: 11rem;
   padding-bottom: 6rem;
 
+  @include breakpointMF(small-tablet) {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-gap: 2rem;
+  }
+
   @include breakpoint(mobile) {
     padding-top: 4rem;
     padding-bottom: 4rem;
@@ -27,9 +33,10 @@
   text-transform: uppercase;
 
   @include breakpointMF(small-tablet) {
-    max-width: 50rem;
-    position: absolute;
-    left: 0;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin-right: -5rem;
+    margin-top: -7rem;
   }
 
   @include breakpoint(mobile) {
@@ -49,11 +56,7 @@
 
 .product__list {
   @include breakpointMF(small-tablet) {
-    position: absolute;
-    z-index: 5;
-    top: 8.2rem;
-    right: 0;
-    width: 45rem;
+    display: contents;
   }
 
   @include breakpoint(mobile) {
@@ -67,21 +70,30 @@
     display: none;
   }
   @include breakpointMF(small-tablet) {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: auto;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.4s, visibility 0s linear 0.4s;
-    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    &:nth-child(1) {
+      grid-column: 3 / 4;
+      grid-row: 1 / 2;
+      margin-left: -9rem;
+      margin-top: -3rem;
+    }
+    &:nth-child(2) {
+      grid-column: 3 / 4;
+      grid-row: 2 / 3;
 
-    &.active {
-      z-index: 10;
-      opacity: 1;
-      visibility: inherit;
-      transition: opacity 0.4s, visibility 0.4s;
+      margin-top: 18rem;
+      margin-left: -9rem;
+    }
+    &:nth-child(3) {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      margin-top: 18rem;
+      margin-right: -9rem;
+
+      .product__card {
+        margin-left: auto;
+      }
     }
   }
 }
@@ -90,6 +102,10 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+
+  @include breakpointMF(small-tablet) {
+    max-width: 36rem;
+  }
 
   @include breakpoint(mobile) {
     gap: 0;
@@ -160,7 +176,6 @@
   line-height: 130%;
   letter-spacing: -0.048rem;
   color: rgba(14, 14, 14, 0.7);
-  max-width: 28rem;
 
   @include breakpoint(mobile) {
     font-size: 1.6rem;
@@ -178,10 +193,14 @@
   margin: 0 auto;
 
   position: relative;
-  border: 1px solid #b7b7b7;
-  border-radius: 50%;
 
   width: 60rem;
+
+  @include breakpointMF(small-tablet) {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    align-self: flex-start;
+  }
 
   canvas {
     width: 100%;
@@ -226,12 +245,6 @@
   padding: 1.9rem;
   width: 15rem;
   text-align: center;
-  cursor: pointer;
-
-  &.active {
-    background-color: #0e0e0e;
-    color: white;
-  }
 
   &:nth-child(1) {
     top: 0;
@@ -245,12 +258,7 @@
     transform: translateX(-50%) translateY(-50%);
     z-index: 5;
   }
-  // &:nth-child(3) {
-  //   top: 100%;
-  //   left: 50%;
-  //   transform: translateX(-50%) translateY(-50%);
-  //   z-index: 5;
-  // }
+
   &:nth-child(3) {
     top: 50%;
     left: 0;
